# chatBotTry

./: .pre-commit-config.yaml  languages.py  pyproject.toml  requirements.txt  train_script.py
api/: about_comment_count.py  about_user.py  admin.py  bot_base.py  bot_messages.py  chatter_bot_func.py  constants.py  mecab_function.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py  weather_base.py
api/data/: constants.py  operation.py  sticker_data.py  target.py
api/migrations/: 0001_initial.py  0002_alter_customuser_options.py  0003_unknownmessage.py  0004_greetingmessage.py  0005_smartpoll_alter_greetingmessage_options_and_more.py  0006_buddyinformation_buddy_name_and_more.py  0007_alter_buddyinformation_buddy_name.py  0008_userpollrelation_delete_buddyinformation.py  0009_alter_userpollrelation_options.py  0010_alter_customuser_line_id.py  0011_smartpoll_can_sky_photo.py  0012_broadcastmessage.py  0013_broadcastmessage_created_at_and_more.py  0014_responsemessage_alter_greetingmessage_text_and_more.py  0015_userpollrelation_is_buddy_and_more.py  0016_usersequence_userpollrelation_poll_gender.py  0017_usersequence_user.py  0018_alter_usersequence_options_usersequence_target.py  0019_customuser_created_at_and_more.py  0020_alter_userpollcommentcount_options_and_more.py  0021_userpollcommentcount_continuous_day_in_level.py  0022_responsemessage_poll_gender_and_more.py  0023_remove_responsemessage_poll_generation_and_more.py  (+5 more)
api/sequences/: about_buddy.py  (+7 more)
be/: asgi.py  celery.py  settings.py  tasks.py  wsgi.py
data/: gunicorn.service
(+17 files in other folders)
