[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 100

[tool.isort]
known_django = ["django", "rest_framework"]
line_length = 100
profile = "black"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.poetry]
authors = ["AdachiTetsuya <1019born@gmail.com>"]
description = ""
name = "be"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
black = "^23.3.0"
celery = "^5.3.1"
django = "^4.2.1"
django-celery-beat = "^2.5.0"
django-celery-results = "^2.5.1"
django-cors-headers = "^4.0.0"
django-extensions = "^3.2.3"
django-redis = "^5.3.0"
django-ses = "^3.5.0"
djangorestframework = "^3.14.0"
flake8 = "^6.0.0"
graphviz = "^0.20.1"
isort = "^5.12.0"
pre-commit = "^3.3.2"
python = "^3.11"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
toml-sort = "^0.23.1"
